--- a/iceberg-theme/static/css/markdown.css
+++ b/iceberg-theme/static/css/markdown.css
@@ -59,7 +59,6 @@ body {
   font-size: 16px;
   line-height: 1.5;
   word-wrap: break-word;
-  min-width: 1024px;
   padding-top: 1rem;
   padding-left: 25%;
   padding-right: 25%;
